sum of filtered uniform process verification

--- a/theory/campbell_theorem.ipynb
+++ b/theory/campbell_theorem.ipynb
@@ -293,14 +293,120 @@
     " &= \\frac{\\lambda}{2\\tau}+\\lambda^2 \\\\\n",
     "\\end{align*}\n",
     "\n",
+    "which also matches what we derived in the Poisson synapse [notebook](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_poisson.ipynb).\n",
+    "\n",
     "Therefore,\n",
     "\n",
     "\\begin{align*}\n",
     "\\Var(X) &= \\frac{\\lambda}{2\\tau} + \\lambda^2 - \\lambda^2 \\\\\n",
     " &= \\frac{\\lambda}{2\\tau}\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking the filtered renewal equations with a uniform process\n",
+    "\n",
+    "The uniform process actually violates the assumption that the $T_i$ are iid because $T_1=\\frac{1}{\\lambda}-T_0$ where $T_0\\sim\\text{Uniform}(0, \\frac{1}{\\lambda})$ while $T_i=\\frac{1}{\\lambda}$ for $i>1$. That is, only the offset $T_0$ is actually random.\n",
+    "\n",
+    "Since the $T_i$ are not iid, we need to reexamine the first and second moment derivations. Without the assumption of identical distributions,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E[X] &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\prod_{j=1}^iE\\left[e^{-T_j/\\tau}\\right] \\\\\n",
+    " &= \\frac{1}{\\tau}\\left(E\\left[e^{-T_1/\\tau}\\right]+\n",
+    "    E\\left[e^{-T_1/\\tau}\\right]E\\left[e^{-T_2/\\tau}\\right] + \n",
+    "    E\\left[e^{-T_1/\\tau}\\right]E\\left[e^{-T_2/\\tau}\\right]E\\left[e^{-T_3/\\tau}\\right] + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau}E\\left[e^{-T_1/\\tau}\\right]\\left(1+\n",
+    "    E\\left[e^{-T_2/\\tau}\\right] + \n",
+    "    E\\left[e^{-T_2/\\tau}\\right]E\\left[e^{-T_3/\\tau}\\right] + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau}E\\left[e^{-(1/\\lambda-T_0)/\\tau}\\right]\\left(1+\n",
+    "    e^{-1/\\lambda\\tau} + e^{-2/\\lambda\\tau} + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau}E\\left[e^{T_0/\\tau}\\right]\\left(e^{-1/\\lambda\\tau}+\n",
+    "    e^{-2/\\lambda\\tau} + e^{-3/\\lambda\\tau} + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau}E\\left[e^{T_0/\\tau}\\right]\\frac{e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}} \\\\\n",
+    " &= \\frac{1}{\\tau}\\lambda\\tau e^{1/\\lambda\\tau}\\left(1-e^{-1/\\lambda\\tau}\\right)\n",
+    "    \\frac{e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}} & E\\left[e^{T_0/\\tau}\\right] \\text{ derived below} \\\\\n",
+    " &= \\lambda \\\\\n",
     "\\end{align*}\n",
     "\n",
-    "which also matches what we derived in the Poisson synapse [notebook](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_poisson.ipynb)."
+    "which matches the value we derived in the uniform synapse [notebook](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the second moment, we step back to the original expression\n",
+    "\n",
+    "\\begin{align*}\n",
+    "X^2 &= \\frac{1}{\\tau^2}\\left(e^{-T_1/\\tau}+e^{-T_1/\\tau}e^{-T_2/\\tau}+\n",
+    "    e^{-T_1/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right)\n",
+    "    \\left(e^{-T_1/\\tau}+e^{-T_1/\\tau}e^{-T_2/\\tau}+\n",
+    "    e^{-T_1/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}e^{T_0/\\tau}\\left(e^{-T_1'/\\tau}+e^{-T_1'/\\tau}e^{-T_2/\\tau}+\n",
+    "    e^{-T_1'/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right)\n",
+    "    e^{T_0/\\tau}\\left(e^{-T_1'/\\tau}+e^{-T_1'/\\tau}e^{-T_2/\\tau}+\n",
+    "    e^{-T_1'/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right) \\\\\n",
+    " &= e^{2T_0/\\tau}\\frac{1}{\\tau^2}\\left(e^{-T_1'/\\tau}+e^{-T_1'/\\tau}e^{-T_2/\\tau}+\n",
+    "    e^{-T_1'/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right)\n",
+    "    \\left(e^{-T_1'/\\tau}+e^{-T_1'/\\tau}e^{-T_2/\\tau}+\n",
+    "    e^{-T_1'/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right) \\\\\n",
+    " &= e^{2T_0/\\tau}\\tilde{X}^2 \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $T_1'=\\frac{1}{\\lambda}$ and so $\\tilde{X}$ will be the filtered uniform process without any offset due to $T_0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "E[X^2] &= E\\left[e^{2T_0/\\tau}\\right]\\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
+    "    2\\sum_{n=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{n}\\right) \\\\\n",
+    " &= \\frac{\\lambda\\tau}{2}e^{2/\\lambda\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+    "    \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(e^{-2/\\lambda\\tau}\\right)^i\\left(1 +\n",
+    "    2\\sum_{n=1}^{\\infty}\\left(e^{-1/\\lambda\\tau}\\right)^{n}\\right) \\\\\n",
+    " &= \\frac{\\lambda\\tau}{2}e^{2/\\lambda\\tau}\\left(1-e^{-2/\\lambda\\tau}\\right)\n",
+    "    \\frac{1}{\\tau^2}\\frac{e^{-2/\\lambda\\tau}}{1-e^{-2/\\lambda\\tau}}\\left(1 +\n",
+    "    2\\frac{e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}}\\right) \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau}\\left(1 + 2\\frac{e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}}\\right) \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau}\\left(\\frac{1-e^{-1/\\lambda\\tau}+2e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}}\\right) \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau}\\left(\\frac{1+e^{-1/\\lambda\\tau}}{1-e^{-1/\\lambda\\tau}}\\right) \\\\\n",
+    " &= \\frac{\\lambda}{2\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "which also matches the value we derived in the uniform synapse [notebook](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Therefore,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\Var(x) &= E[x^2]-E[x]^2 \\\\\n",
+    " &=  \\frac{\\lambda}{2\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - \\lambda^2 \\\\\n",
+    " &=  \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right) \\\\\n",
+    " &=  \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right). \\\\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For $c\\neq0$,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E\\left[e^{cT_0/\\tau}\\right] &= \\int_0^{1/\\lambda}\\frac{1}{1/\\lambda}e^{ct/\\tau}dt \\\\\n",
+    " &= \\frac{\\lambda\\tau}{c}\\left[e^{ct/\\tau}\\right]_0^{1/\\lambda} \\\\\n",
+    " &= \\frac{\\lambda\\tau}{c}\\left(e^{c/\\lambda\\tau}-1\\right) \\\\\n",
+    " &= \\frac{\\lambda\\tau}{c}e^{c/\\lambda\\tau}\\left(1-e^{-c/\\lambda\\tau}\\right) \\\\\n",
+    "\\end{align*}"
    ]
   },
   {
@@ -331,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.3"
   }
  },
  "nbformat": 4,
