fix latex theta

--- a/theory/campbell_theorem.ipynb
+++ b/theory/campbell_theorem.ipynb
@@ -24,7 +24,7 @@
     "E[e^{\\theta\\Sigma}]=\\exp\\left(\\int_S(e^{\\theta f(x)}-1)\\mu(dx)\\right)\n",
     "$$\n",
     "\n",
-    "for any any complex $\\theta$ for which the initegral on the right converges (in particular, when $\\theta is purely imaginary). Further, if the integral converges,\n",
+    "for any any complex $\\theta$ for which the initegral on the right converges (in particular, when $\\theta$ is purely imaginary). Further, if the integral converges,\n",
     "\n",
     "\\begin{align*}\n",
     "E[\\Sigma] &= \\int_Sf(x)\\mu(dx) \\\\\n",
