plots on memorylessness

--- a/synapse/synapse_SNR_gamma.ipynb
+++ b/synapse/synapse_SNR_gamma.ipynb
@@ -61,6 +61,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\\begin{align*}\n",
+    "E[X] &= E\\left[\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right)\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
+    " &= E\\left[\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right)\\right]\n",
+    "    \\sum_{i=0}^{\\infty}\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^{ki} \\\\\n",
+    " &= \n",
+    "\\end{align*}\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We [know](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/theory/campbell_theorem.ipynb#Filtered-Renewal-processes) that first-order, low-passed filtered renewal processes have moments\n",
     "\\begin{align*}\n",
     "E[X] &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
@@ -87,6 +101,18 @@
     " &= \\frac{\\lambda^k}{\\Gamma(k)}\\left(\\frac{\\tau}{c-\\lambda\\tau}\\right)^k\\Gamma(k) \\\\\n",
     " &= \\left(\\frac{\\lambda\\tau}{c-\\lambda\\tau}\\right)^k \\\\\n",
     "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# check the above\n",
+    "\n"
    ]
   },
   {
@@ -191,6 +217,114 @@
     "\\end{align*}\n",
     "\n",
     "This is pretty ugly..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulation setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "s = np.random.seed(2)\n",
+    "rng = np.random.RandomState(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def th_mean(lam, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Theoretical plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fixed rate simulations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variable rate simulations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def check_theory(lams, k, n=30., tau=.01, trials=300):\n",
+    "    # lams array of frequencies to test\n",
+    "    # n number of time constants to consider in each experiment\n",
+    "    # tau time constant of the filter\n",
+    "\n",
+    "    nfreqs = len(lams) # number of frequencies to test\n",
+    "    obs_mean = np.zeros(nfreqs)\n",
+    "#     obs_var = np.zeros(nfreqs)\n",
+    "#     obs_snr = np.zeros(nfreqs)\n",
+    "    for lam_idx, lam in enumerate(lams):\n",
+    "        nspikes = int(n*tau*lam/float(k))\n",
+    "        isi = rng.gamma(k, 1./lam, (trials, nspikes))\n",
+    "        spike_times = np.cumsum(isi, axis=1)\n",
+    "        spike_vals = spike_value(spike_times, tau)\n",
+    "        exp_state = np.sum(spike_vals, axis=1)\n",
+    "        obs_mean[lam_idx] = np.mean(exp_state)\n",
+    "#         obs_var[lam_idx] = np.var(exp_state)\n",
+    "#         obs_snr[lam_idx] = get_snr(obs_mean[lam_idx], obs_var[lam_idx])\n",
+    "\n",
+    "#     mean_th = th_mean(lams)\n",
+    "#     var_th = th_var(lams, tau)\n",
+    "#     snr_th = th_snr(lams, tau)\n",
+    "\n",
+    "#     plt.figure(figsize=(12,4))\n",
+    "#     plt.subplot(131)\n",
+    "    plt.plot(lams*tau, obs_mean*tau, 'b', label='simulation')\n",
+    "#     plt.plot(lams*tau, mean_th*tau, 'r--', label='theory')\n",
+    "    plt.ylabel(r'$E[x]\\tau$', fontsize=20)\n",
+    "    plt.legend(loc='upper left', fontsize=16)\n",
+    "#     plt.subplot(132)\n",
+    "#     plt.plot(lams*tau, obs_var*tau**2, 'b')\n",
+    "#     plt.plot(lams*tau, var_th*tau**2, 'r--')\n",
+    "    plt.xlabel(r'$\\lambda\\tau$', fontsize=20)\n",
+    "#     plt.ylabel(r'$\\operatorname{Var}(x)\\tau^2$', fontsize=20)\n",
+    "#     plt.title(r'$%d$, $%d\\tau$ trials' % (trials, k), fontsize=20)\n",
+    "#     plt.subplot(133)\n",
+    "#     plt.plot(lams*tau, obs_snr, 'b')\n",
+    "#     plt.plot(lams*tau, snr_th, 'r--')\n",
+    "#     plt.ylabel(r'$SNR(x)$', fontsize=20)\n",
+    "#     plt.tight_layout()\n",
+    "    \n",
+    "lams = np.linspace(5, 1000, 50)\n",
+    "check_theory(lams, k=30, trials=10000)"
    ]
   }
  ],
