--- a/synapse/synapse_SNR_poisson.ipynb
+++ b/synapse/synapse_SNR_poisson.ipynb
@@ -556,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fixed Rate Simulation"
+    "# Fixed rate simulations"
    ]
   },
   {
@@ -2350,7 +2350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variable Rate Simulations"
+    "# Variable rate simulations"
    ]
   },
   {
@@ -2801,10 +2801,8 @@
     "    # lams array of frequencies to test\n",
     "    # k number of time constants to consider in each experiment\n",
     "    # tau time constant of the filter\n",
-    "    # lam frequency of spikes innexp = 300 # number of experiments\n",
-    "    nspikes = 1000 # number of spikes in each experiment\n",
+    "    \n",
     "    nfreqs = len(lams) # number of frequencies to test\n",
-    "\n",
     "    obs_mean = np.zeros(nfreqs)\n",
     "    obs_var = np.zeros(nfreqs)\n",
     "    obs_snr = np.zeros(nfreqs)\n",
