correction in gamma synapse mean

--- a/synapse/synapse_SNR_gamma.ipynb
+++ b/synapse/synapse_SNR_gamma.ipynb
@@ -31,6 +31,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "s = np.random.seed(2)\n",
+    "rng = np.random.RandomState(s)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,8 +80,11 @@
     "\\begin{align*}\n",
     "E[X] &= E\\left[\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right)\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
     " &= E\\left[\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right)\\right]\n",
-    "    \\sum_{i=0}^{\\infty}\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^{ki} \\\\\n",
-    " &= \n",
+    "    \\sum_{i=0}^{\\infty}\\left(\\frac{\\lambda\\tau}{1+\\lambda\\tau}\\right)^{ki} \\\\\n",
+    " &= E\\left[\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right)\\right]\n",
+    "    \\frac{1}{1-\\left(\\frac{\\lambda\\tau}{1+\\lambda\\tau}\\right)^{k}} \\\\\n",
+    " &= E\\left[\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right)\\right]\n",
+    "    \\frac{(1+\\lambda\\tau)^k}{(1+\\lambda\\tau)^k-(\\lambda\\tau)^k} \\\\\n",
     "\\end{align*}\n",
     "\n",
     "---"
@@ -93,42 +112,28 @@
     "E[e^{-cT/\\tau}] &= \\int_{-\\infty}^{\\infty}e^{-ct/\\tau}f_T(t)dt \\\\\n",
     " &= \\int_{0}^{\\infty}e^{-ct/\\tau}\\frac{\\lambda^k}{\\Gamma(k)}t^{k-1}e^{-\\lambda t}dt \\\\\n",
     " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}t^{k-1}e^{-ct/\\tau}e^{-\\lambda t}dt \\\\\n",
-    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}t^{k-1}e^{-t(c/\\tau-\\lambda)}dt \\\\\n",
-    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}\\left(\\frac{\\tau}{c-\\lambda\\tau}z\\right)^{k-1}\n",
-    "     e^{-z}\\frac{\\tau}{c-\\lambda\\tau}dz & \\text{(see below) where } z = t(c/\\tau-\\lambda) \\\\\n",
-    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}\\left(\\frac{\\tau}{c-\\lambda\\tau}\\right)^kz^{k-1}e^{-z}dz \\\\\n",
-    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\left(\\frac{\\tau}{c-\\lambda\\tau}\\right)^k\\int_{0}^{\\infty}z^{k-1}e^{-z}dz \\\\\n",
-    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\left(\\frac{\\tau}{c-\\lambda\\tau}\\right)^k\\Gamma(k) \\\\\n",
-    " &= \\left(\\frac{\\lambda\\tau}{c-\\lambda\\tau}\\right)^k \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}t^{k-1}e^{-t(c/\\tau+\\lambda)}dt \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}\\left(\\frac{\\tau}{c+\\lambda\\tau}u\\right)^{k-1}\n",
+    "     e^{-u}\\frac{\\tau}{c+\\lambda\\tau}du & u = t(c/\\tau+\\lambda) \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\int_{0}^{\\infty}\\left(\\frac{\\tau}{c+\\lambda\\tau}\\right)^ku^{k-1}e^{-u}du \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\left(\\frac{\\tau}{c+\\lambda\\tau}\\right)^k\\int_{0}^{\\infty}u^{k-1}e^{-u}du \\\\\n",
+    " &= \\frac{\\lambda^k}{\\Gamma(k)}\\left(\\frac{\\tau}{c+\\lambda\\tau}\\right)^k\\Gamma(k) \\\\\n",
+    " &= \\left(\\frac{\\lambda\\tau}{c+\\lambda\\tau}\\right)^k \\\\\n",
     "\\end{align*}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# check the above\n",
-    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we expand on our substitution of $z$ for $t$.\n",
+    "Here, we expand on our substitution of $u$ for $t$.\n",
     "\n",
     "\\begin{align*}\n",
-    "z &= t(c/\\tau-\\lambda) \\\\\n",
-    " &= t\\frac{c-\\lambda\\tau}{\\tau} \\\\\n",
-    "\\frac{\\tau}{c-\\lambda\\tau}z &= t \\\\\n",
-    "\\frac{\\tau}{c-\\lambda\\tau}dz &= dt \\\\\n",
-    "\\end{align*}\n",
-    "\n",
-    "Note that this substitution requires $c>\\lambda\\tau$ for the limits to be consistent."
+    "u &= t(c/\\tau+\\lambda) \\\\\n",
+    " &= t\\frac{c+\\lambda\\tau}{\\tau} \\\\\n",
+    "\\frac{\\tau}{c+\\lambda\\tau}u &= t \\\\\n",
+    "\\frac{\\tau}{c+\\lambda\\tau}du &= dt \\\\\n",
+    "\\end{align*}"
    ]
   },
   {
@@ -142,81 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align*}\n",
-    "E[X] &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
-    " &= \\frac{1}{\\tau}\\sum_{i=1}^\\infty\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^{ki} \\\\\n",
-    " &= \\frac{1}{\\tau}\\frac{\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^k}\n",
-    "     {1-\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^k} &\n",
-    "     \\text{(see below) assuming } \\left|\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right|<1 \\\\\n",
-    " &= \\frac{1}{\\tau}\\frac{(\\lambda\\tau)^k}{(1-\\lambda\\tau)^k-(\\lambda\\tau)^k}\n",
-    "\\end{align*}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here, we look at the implications of our assumption required for the summation to converge\n",
-    "\n",
-    "$$\n",
-    "\\left|\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right|<1\n",
-    "$$\n",
-    "\n",
-    "becomes\n",
-    "\n",
-    "\\begin{align*}\n",
-    "\\frac{\\lambda\\tau}{1-\\lambda\\tau} &< 1 \\\\\n",
-    "\\lambda\\tau &< 1-\\lambda\\tau \\\\\n",
-    "\\lambda\\tau &< \\frac{1}{2} \\\\\n",
-    "\\end{align*}\n",
-    "\n",
-    "or\n",
-    "\n",
-    "\\begin{align*}\n",
-    "-\\frac{\\lambda\\tau}{1-\\lambda\\tau} &< 1 \\\\\n",
-    "\\frac{\\lambda\\tau}{1-\\lambda\\tau} &\\ge -1 \\\\\n",
-    "\\lambda\\tau &\\ge -1+\\lambda\\tau \\\\\n",
-    "0 &\\ge -1 \\\\\n",
-    "\\end{align*}\n",
-    "\n",
-    "which is trivally true. Therefore, we only require that $\\lambda\\tau<\\frac{1}{2}$ (i.e. less than 1 spike per $\\tau$).\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Syanpse variance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\begin{align*}\n",
-    "E[X^2] &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
-    "    2\\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{j}\\right) \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{2-\\lambda\\tau}\\right)^{ki}\\left(1 +\n",
-    "    2\\sum_{j=1}^{\\infty}\\left(\\frac{\\lambda\\tau}{1-\\lambda\\tau}\\right)^{kj}\\right) \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\frac{(\\lambda\\tau)^k}{(2-\\lambda\\tau)^k-(\\lambda\\tau)^k}\\left(1 +\n",
-    "    2\\frac{(\\lambda\\tau)^k}{(1-\\lambda\\tau)^k-(\\lambda\\tau)^k}\\right) \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\left(\\frac{(\\lambda\\tau)^k}{(2-\\lambda\\tau)^k-(\\lambda\\tau)^k} +\n",
-    "    2\\frac{(\\lambda\\tau)^k}{(2-\\lambda\\tau)^k-(\\lambda\\tau)^k}\n",
-    "    \\frac{(\\lambda\\tau)^k}{(1-\\lambda\\tau)^k-(\\lambda\\tau)^k}\\right) \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\left(\\frac{(\\lambda\\tau)^k\\left[(1-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]+2(\\lambda\\tau)^{2k}}\n",
-    "    {\\left[(2-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]\\left[(1-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]}\\right) \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\left(\\frac{(\\lambda\\tau)^k\\left[(1-\\lambda\\tau)^k+(\\lambda\\tau)^k\\right]}\n",
-    "    {\\left[(2-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]\\left[(1-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]}\\right) \\\\\n",
-    "\\end{align*}\n",
-    "\n",
-    "\\begin{align*}\n",
-    "\\Var(X) &= E[X^2] - E[X]^2 \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\left(\\frac{(\\lambda\\tau)^k\\left[(1-\\lambda\\tau)^k+(\\lambda\\tau)^k\\right]}\n",
-    "    {\\left[(2-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]\\left[(1-\\lambda\\tau)^k-(\\lambda\\tau)^k\\right]}\\right)\n",
-    "    - \\left(\\frac{1}{\\tau}\\frac{(\\lambda\\tau)^k}{(1-\\lambda\\tau)^k-(\\lambda\\tau)^k}\\right)^2\n",
-    "\\end{align*}\n",
-    "\n",
-    "This is pretty ugly..."
    ]
   },
   {
@@ -326,6 +257,76 @@
     "lams = np.linspace(5, 1000, 50)\n",
     "check_theory(lams, k=30, trials=10000)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appendix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verify the formula for $E\\left[e^{cT/\\tau}\\right]$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# check the formula for E[e^{cT/tau}]\n",
+    "def check_E_decay(lam, k, c=1., tau=0.01, n_trials=1000):\n",
+    "    t = rng.gamma(k, 1./lam, n_trials)\n",
+    "    x = np.exp(-c*t/tau)\n",
+    "    mean_obs = np.mean(x)\n",
+    "    mean_th = (lam*tau/(c+lam*tau))**k\n",
+    "    \n",
+    "    print mean_th, mean_obs, np.abs(mean_obs - mean_th)/mean_th"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.909090909091 0.910296020194 0.00132562221351\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_E_decay(lam=1000., k=1., c=1, n_trials=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.833333333333 0.833905838075 0.000687005689963\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_E_decay(lam=1000., k=1., c=2, n_trials=10000)"
+   ]
   }
  ],
  "metadata": {
@@ -344,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
