fill out E[X^2] for different T1

--- a/theory/campbell_theorem.ipynb
+++ b/theory/campbell_theorem.ipynb
@@ -219,7 +219,7 @@
     "\n",
     "$$\n",
     "\\Var(X) = \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
-    "    2\\sum_{n=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{n}\\right) -\n",
+    "    2\\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{j}\\right) -\n",
     "    \\left(\\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i\\right)^2\n",
     "$$"
    ]
@@ -310,8 +310,9 @@
     "<div style=\"display:block; border: 1px solid black; padding: 15px;background-color: #EEEEFF;margin: 10px\">\n",
     "<h2> Filtered renewal process with different first interval summary of results </h2>\n",
     "\\begin{align*}\n",
-    "E[X] &= E\\left[\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right)\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
-    "E[X^2] &= \\\\\n",
+    "E[X] &= \\frac{1}{\\tau}E\\left[e^{-T_1/\\tau}\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
+    "E[X^2] &= \\frac{1}{\\tau^2}E\\left[e^{-2T_1/\\tau}\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
+    "    \\left(1 + 2\\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^j\\right) \\\\\n",
     "\\end{align*}\n",
     "</div>"
    ]
@@ -339,7 +340,6 @@
     " &= \\frac{1}{\\tau}E\\left[e^{-T_1/\\tau}\\right]\\left(1+E\\left[e^{-T/\\tau}\\right]+\n",
     "     E\\left[e^{-T/\\tau}\\right]^2 + \\ldots\\right) \\\\\n",
     " &= \\frac{1}{\\tau}E\\left[e^{-T_1/\\tau}\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
-    " &= E\\left[\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right)\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-T/\\tau}\\right]^i \\\\\n",
     "\\end{align*}"
    ]
   },
@@ -347,15 +347,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where \n",
+    "We've separated the effect of the first interval on the mean value from the rest of the intervals. Now, how do we find the distribution of $T_1$? To do this, we break the problem into two parts:\n",
+    " 1. Find the distribution of the length of the interval containing $T_1$\n",
+    " 2. Sample uniformly from within the intervals containing $T_1$\n",
+    "\n",
+    "To find the distribution of the intervals containing $T_1$, imagine that we pre-generate many intervals from $T$. We select an arbitrary time and ask what interval it belongs to. There are two factors to consider:\n",
+    " 1. the frequency of intervals of length $t$, and\n",
+    " 2. the length of the intervals.\n",
+    "\n",
+    "Intervals of a particular length $t$ show up with frequency $f_T(t)$. Higher $f_T(t)$ means we're more likely to fall into an interval of length $t$ if selecting from the intervals uniformly. \n",
+    "\n",
+    "Since we're selecting a time at random, we're also more likely to select a longer intervals.\n",
+    "\n",
+    "Putting these two observations together, we have that \n",
+    "\n",
+    "$$f_{T^*}(t)\\sim tf_T(t)$$\n",
+    "\n",
+    "To normalize this to a valid PDF, we need it to integrate to $1$. Note that $\\int_{-\\infty}^{\\infty}tf_T(t) = E[T]$, so we simply normalize by $E[T]$ to obtain a valid PDF.\n",
+    "\n",
+    "$$\n",
+    "f_{T^*}(t) = \\frac{tf_T(t)}{E[T]}\n",
+    "$$\n",
+    "\n",
+    "Now that we have $T^*$, we sample uniformly from within $T^*$. This can be expressed using a second random variable $U\\sim \\mathrm{Uniform}(0, 1)$, which is independent of $T^*$ and express $T_1$ as $T_1 = UT^*$.\n",
     "\n",
     "\\begin{align*}\n",
-    "E\\left[e^{-T_1/\\tau}\\right] &= E\\left[E\\left[e^{-T_1/\\tau}|T_1'\\right]\\right] \\\\\n",
-    " &= E\\left[\\int_0^{T_1'}\\frac{1}{T_1'}e^{-t/\\tau}dt\\right] \\\\\n",
-    " &= E\\left[-\\frac{\\tau}{T_1'}\\left[e^{-t/\\tau}\\right]_0^{T_1'}\\right] \\\\\n",
-    " &= E\\left[\\frac{\\tau}{T_1'}\\left(1-e^{-T_1'/\\tau}\\right)\\right] \\\\\n",
-    " &= E\\left[\\frac{\\tau}{T}\\left(1-e^{-T/\\tau}\\right)\\right] \\\\\n",
-    "\\end{align*}"
+    "P(T_1 \\le x) &= P(UT^* \\le x) \\\\\n",
+    " &= \\int_{0}^{\\infty}P(Ut \\le x | T=t)f_{T^*}(t)dt \\\\\n",
+    " &= \\int_{0}^{\\infty}P(U \\le \\frac{x}{t})f_{T^*}(t)dt \\\\\n",
+    " &= \\ldots \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "Therefore,\n",
+    "\n",
+    "$$f_{T_1}(t) = \\frac{1-F_T(t)}{E[T]}$$"
    ]
   },
   {
@@ -377,39 +402,45 @@
     " &\\quad + \\frac{2}{\\tau^2}\\left(e^{-2T_1/\\tau}e^{-T_2/\\tau}+e^{-2T_1/\\tau}e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots +\n",
     "    e^{-2T_1/\\tau}e^{-2T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right)\n",
     "    & \\text{cross terms} \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\prod_{j=1}^{i}e^{-2T_j/\\tau} +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\sum_{k=i+1}^{\\infty}\n",
-    "    \\left(\\prod_{j=1}^ie^{-2T_j/\\tau}\\right)\\left(\\prod_{m=i+1}^{k}e^{-T_m/\\tau}\\right) \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\prod_{j=1}^{i}e^{-2T_j/\\tau} +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\prod_{j=1}^ie^{-2T_j/\\tau}\\right)\n",
-    "    \\sum_{k=i+1}^{\\infty}\\left(\\prod_{m=i+1}^{k}e^{-T_m/\\tau}\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}e^{-2T_1/\\tau}\n",
+    "    \\left(1+e^{-2T_2/\\tau}+e^{-2T_2/\\tau}e^{-2T_3/\\tau}+\\ldots\\right) \\\\\n",
+    " &\\quad + \\frac{2}{\\tau^2}e^{-2T_1/\\tau}\\left(e^{-T_2/\\tau}+e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots +\n",
+    "    e^{-2T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right) \\\\\n",
     "\\end{align*}\n",
     "\n",
     "Now,\n",
     "\n",
     "\\begin{align*}\n",
-    "E[X^2] &= E\\left[\\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}\\prod_{j=1}^{i}e^{-2T_j/\\tau} +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}\\left(\\prod_{j=1}^ie^{-2T_j/\\tau}\\right)\n",
-    "    \\sum_{k=i+1}^{\\infty}\\left(\\prod_{m=i+1}^{k}e^{-T_m/\\tau}\\right)\\right] \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
-    "    \\sum_{k=i+1}^{\\infty}\\left(\\prod_{m=i+1}^{k}E\\left[e^{-T_m/\\tau}\\right]\\right) \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
-    "    \\sum_{k=i+1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{k-i} \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i +\n",
-    "    \\frac{2}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
-    "    \\sum_{n=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{n} & \\text{substituting }n=k-i \\\\\n",
-    " &= \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
-    "    2\\sum_{n=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{n}\\right) \\\\\n",
+    "E[X^2] &= E\\left[\\frac{1}{\\tau^2}e^{-2T_1/\\tau}\n",
+    "    \\left(1+e^{-2T_2/\\tau}+e^{-2T_2/\\tau}e^{-2T_3/\\tau}+\\ldots\\right)\\right] \\\\\n",
+    " &\\quad + E\\left[\\frac{2}{\\tau^2}e^{-2T_1/\\tau}\\left(e^{-T_2/\\tau}+e^{-T_2/\\tau}e^{-T_3/\\tau} + \\ldots +\n",
+    "    e^{-2T_2/\\tau}e^{-T_3/\\tau} + \\ldots\\right)\\right] \\\\\n",
+    " &= \\frac{1}{\\tau^2}E\\left[e^{-2T_1/\\tau}\\right]\n",
+    "    \\left(1+E\\left[e^{-2T_2/\\tau}\\right]+E\\left[e^{-2T_2/\\tau}\\right]E\\left[e^{-2T_3/\\tau}\\right]+\n",
+    "    \\ldots\\right) \\\\\n",
+    " &\\quad + \\frac{2}{\\tau^2}E\\left[e^{-2T_1/\\tau}\\right]\\left(E\\left[e^{-T_2/\\tau}\\right]+\n",
+    "    E\\left[e^{-T_2/\\tau}\\right]E\\left[e^{-T_3/\\tau}\\right] + \\ldots +\n",
+    "    E\\left[e^{-2T_2/\\tau}\\right]E\\left[e^{-T_3/\\tau}\\right] + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}E\\left[e^{-2T_1/\\tau}\\right]\n",
+    "    \\left(1+E\\left[e^{-2T/\\tau}\\right]+E\\left[e^{-2T/\\tau}\\right]^2+\n",
+    "    \\ldots\\right) \\\\\n",
+    " &\\quad + \\frac{2}{\\tau^2}E\\left[e^{-2T_1/\\tau}\\right]\\left(E\\left[e^{-T/\\tau}\\right]+\n",
+    "    E\\left[e^{-T/\\tau}\\right]^2 + \\ldots +\n",
+    "    E\\left[e^{-2T/\\tau}\\right]E\\left[e^{-T/\\tau}\\right] + \\ldots\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}E\\left[e^{-2T_1/\\tau}\\right]\\left(\\sum_{i=0}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i + \n",
+    "    2\\sum_{i=0}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
+    "    \\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^j\\right) \\\\\n",
+    " &= \\frac{1}{\\tau^2}E\\left[e^{-2T_1/\\tau}\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
+    "    \\left(1 + 2\\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^j\\right) \\\\\n",
     "\\end{align*}\n",
+    "\n",
     "\n",
     "Therefore, an overall expression for the variance will be given by\n",
     "\n",
     "$$\n",
-    "\\Var(X) = \\frac{1}{\\tau^2}\\sum_{i=1}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\\left(1 +\n",
-    "    2\\sum_{n=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^{n}\\right) -\n",
-    "    \\left(\\frac{1}{\\tau}\\sum_{i=1}^\\infty E\\left[e^{-T/\\tau}\\right]^i\\right)^2\n",
+    "\\Var(X) = \\frac{1}{\\tau^2}E\\left[e^{-2T_1/\\tau}\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-2T/\\tau}\\right]^i\n",
+    "    \\left(1 + 2\\sum_{j=1}^{\\infty}E\\left[e^{-T/\\tau}\\right]^j\\right) -\n",
+    "    \\frac{1}{\\tau^2}\\left(E\\left[e^{-T_1/\\tau}\\right]\\sum_{i=0}^{\\infty}E\\left[e^{-T/\\tau}\\right]^i\\right)^2\n",
     "$$"
    ]
   },
@@ -435,6 +466,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### old method\n",
+    "\n",
     "Since the $T_i$ are not iid, we need to reexamine the first and second moment derivations. Without the assumption of identical distributions,\n",
     "\n",
     "\\begin{align*}\n",
