declar Var operator

--- a/theory/filtered_renewal_processes.ipynb
+++ b/theory/filtered_renewal_processes.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Filtered renewal processes"
+    "# Filtered renewal processes\n",
+    "<!---define operatorname var-->\n",
+    "$\\DeclareMathOperator{\\Var}{Var}$\n",
+    "<!---define operatorname var-->"
    ]
   },
   {
