cleanup Poisson synapse notebook

--- a/synapse/synapse_SNR_uniform.ipynb
+++ b/synapse/synapse_SNR_uniform.ipynb
@@ -127,10 +127,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solving for $\\operatorname{Var}(x)$,\n",
+    "Solving for $\\Var(x)$,\n",
     "\n",
     "\\begin{align*}\n",
-    "\\operatorname{Var}(x) &= E[x^2]-E[x]^2 \\\\\n",
+    "\\Var(x) &= E[x^2]-E[x]^2 \\\\\n",
     " &=  \\frac{\\lambda}{2\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - \\lambda^2 \\\\\n",
     " &=  \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right) \\\\\n",
     " &=  \\lambda^2\\left(\\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right) - 1\\right). \\\\\n",
@@ -139,13 +139,13 @@
     "Taking the limit (with Mathematica), \n",
     "\n",
     "$$\n",
-    "\\lim_{\\lambda\\rightarrow\\infty}\\operatorname{Var}(x) = \\frac{1}{12\\tau^2}.\n",
+    "\\lim_{\\lambda\\rightarrow\\infty}\\Var(x) = \\frac{1}{12\\tau^2}.\n",
     "$$\n",
     "\n",
     "The $SNR$ is\n",
     "\n",
     "\\begin{align*}\n",
-    "SNR &= \\frac{E[x]}{\\sqrt{\\operatorname{Var}(x)}} \\\\\n",
+    "SNR &= \\frac{E[x]}{\\sqrt{\\Var(x)}} \\\\\n",
     " &= \\frac{\\lambda}{\\lambda\\sqrt{\n",
     "    \\frac{1}{2\\lambda\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right)- 1}} \\\\\n",
     " &= \\frac{1}{\\sqrt{\n",
